Fix CSS extraction. Remove deprecated plugin.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,19 @@
+.problem-digits {
+    border: 1px solid red;
+}
+
 .wrapper {
-  display: grid;
-  grid-template-columns: 10% 10% 10% 10% 10% 10%;
-  grid-gap: 10px;
-  background-color: #fff;
-  color: #444;
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10%;
+    grid-gap: 10px;
+    background-color: #fff;
+    color: #444;
 }
 
 .box {
-  background-color: #444;
-  color: #fff;
-  border-radius: 5px;
-  padding: 20px;
-  text-align: right;
+    background-color: #444;
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: right;
 }
