--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,23 @@
+.problem-bank {
+    display: flex;
+    border: 1px solid fefeff;
+}
+
 .problem-digits {
-    border: 1px solid red;
+    border: 1px solid #ffefe;
+    width: 100%;
+    height: 1.6rem;
+    text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.problem-column {
+    display: flex;
+    width: 100px;
+    border: 1px solid fefffe;
+    flex-direction: column;
 }
 
 .wrapper {
