--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,22 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+html, body {
+    font-family: 'Source Serif Pro', serif;
+}
+
 .problem-bank {
     display: flex;
     border: 3px solid #000;
 }
 
 .problem-cell {
-        border: 1px solid #333;
+    border: 1px solid #333;
+    padding: 6px;
 }
 
 .problem-digit {
@@ -14,6 +26,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    font-style: italic;
+    font-size: 1.25rem;
     
 }
 
@@ -28,28 +42,11 @@
 
 .problem-column {
     display: flex;
-    max-width: 30px;
-    border: 1px solid fefffe;
+    /* max-width: 30px; */
     flex-direction: column;
 }
 
 .problem-column ~ .problem-column {
-    max-width: 100%;
-    min-width: 100px;
+    flex: 1;
 }
 
-.wrapper {
-    display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10%;
-    grid-gap: 10px;
-    background-color: #fff;
-    color: #444;
-}
-
-.box {
-    background-color: #444;
-    color: #fff;
-    border-radius: 5px;
-    padding: 20px;
-    text-align: right;
-}
