--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,9 @@ html {
 
 html, body {
     font-family: Times New Roman, Georgia, serif;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 .problem-bank {
@@ -53,3 +56,44 @@ html, body {
     flex: 1;
 }
 
+
+#configMenu {
+    position: fixed;
+    width: calc(100% - 3.0rem);
+    height: calc(100% - 3.0rem);
+    background: #fff;
+    margin: 1.5rem;
+    opacity: 0;
+    padding: 1.0rem;
+    
+    /* transition: all 2s; */
+}
+
+#configMenu.menuOn {
+    animation-duration: 1s, 1s;
+    animation-fill-mode: forwards, forwards;
+    animation-delay: 1s, 1.8s;
+    animation-timing-function: ease-in-out, ease-in-out;
+    animation-name: fadein, raiseup;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0.0;
+    }
+    to {
+        opacity: 1.0;
+    }
+}
+
+
+@keyframes raiseup {
+    from {
+        opacity: 1.0;
+        box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
+    }
+    to {
+        opacity: 1.0;
+        box-shadow: 0px 0px 1.0rem 1.0rem rgba(0, 0, 0, 0.2);
+    }
+}
