--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,17 +21,22 @@ html, body {
 .problem-cell {
     border: 1px solid #333;
     padding: 6px;
+    height: 1.5rem;
+    font-size: 0.9rem;
+}
+
+.problem-row {
+    height: 1.4rem;
 }
 
 .problem-digit {
     width: 100%;
-    height: 1.6rem;
     text-align: right;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     font-style: italic;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
     border-top: 0;
     border-bottom: 0;
     
@@ -39,7 +44,6 @@ html, body {
 
 .problem-label {
     width: 100%;
-    height: 1.6rem;
     text-align: right;
     display: flex;
     align-items: center;
